# RB1-PreAproach-Aproach

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/rviz/: config_approach.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp  rotate_service.cpp
